test/syntaxerrors/TestJavaMissingArgRParen.jdc
package exceptions;

public class JavaMissingArgRParen {
    public static void main(String[] args) {
        System.out.println("Hello world!";
    }
}